# Spec-Attack-IR-Finder

./: README.md
llvm-passes/: CMakeLists.txt
llvm-passes/Three/: CMakeLists.txt  three.cpp
test_suite/: linux.txt  three.c
